@@ -1,7 +1,6 @@
 1.0:
 
  - get rid of .0000000 in alert messages
- - support for m,h and d in graphs and in latest values if monitored value in seconds
  - cannot use "." as key in trigger expressions
  - navigation bar for all graphs and screens
 
